# RealTimeRenderEngine

./: CMakeLists.txt  README.md  build_project.bat
src/: FindEngine.cmake  FindExample.cmake
src/Engine/: CMakeLists.txt
src/Engine/Base/: Camera.cpp  Camera.h  Constants.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Object.cpp  Object.h  Shader.cpp  Shader.h  ShaderCode.cpp  ShaderCode.h  TRefCountPtr.h  Texture.h  Texture2D.cpp  Texture2D.h
src/Engine/RHI/: RenderContext.cpp  RenderContext.h
src/Engine/RHI/OpenGL/: OpenGLRenderContext.cpp  OpenGLRenderContext.h
src/Engine/RenderPipeline/: ShaderCode.h  main.cpp
src/Engine/RenderPipeline/base/: Camera.cpp  Camera.h  Object.h  Shader.cpp
src/Engine/Renderer/: BasePassRenderer.cpp  BasePassRenderer.h  MeshRenderer.cpp  MeshRenderer.h
src/Engine/Renderer/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderGraph.inl  RenderGraphPass.h
src/Example/: CMakeLists.txt  main.cpp
